fix: 🐛 logo and toggle stay fixed on mobile
Related: #112

--- a/src/styles/layout/Header.scss
+++ b/src/styles/layout/Header.scss
@@ -37,6 +37,10 @@ header {
   &:has(> nav.show) {
     height: 100%;
     padding-bottom: calc(100vh - 5em);
+
+    @media screen and (orientation: portrait) {
+      height: auto;
+    }
   }
 
   img {
